[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/UI.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/PlayerUI/PlayerUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/UI/SurviveTimeUI/SurviveTimeUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/UI/SubtitlesUI/SubtitlesUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/UI/CountdownUI/CountdownUI.tscn" type="PackedScene" id=5]

[node name="UI" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="PlayerUI" parent="." index="0" instance=ExtResource( 2 )]

[node name="SurviveTimeUI" parent="." index="1" instance=ExtResource( 3 )]

[node name="SubtitlesUI" parent="." index="2" instance=ExtResource( 4 )]

[node name="CountdownUI" parent="." index="3" instance=ExtResource( 5 )]


